# cpp-3d-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/assets/: obj_loader.cc  obj_loader.h  resource_manager.cc  resource_manager.h
src/assets/shaders/: frag.glsl  vert.glsl
src/core/: application.cc  application.h  camera.cc  camera.h  input.cc  input.h  transform.cc  transform.h
src/graphics/: material.cc  material.h  mesh.cc  mesh.h  renderer.cc  renderer.h  shader.cc  shader.h  texture.cc  texture.h
src/math/: mat4.cc  mat4.h  vec2.h  vec3.cc  vec3.h
src/scene/: entity.cc  entity.h  scene.cc  scene.h
